# chiboy-bot

./: .gitignore  README.md  TEST-VERIFICATION.md  android_app.py  buildozer.spec  chiboy-bot-cli.spec  chiboy-bot.spec  chiboy-bot_1.0.0_all.deb  database.py  gui_app.py  ict-trading-bot_1.0.0_all.deb  main.py  pyproject.toml  requirements.txt  setup_api.py  start.sh  v2.0.0-FEATURES.md  webapp.py
api/: index.py
debian/DEBIAN/: control  postinst
debian/usr/share/applications/: chiboy-bot.desktop  ict-trading-bot.desktop
debian/usr/share/ict-trading-bot/: .env.example  README.md  webapp.py
debian/usr/share/ict-trading-bot/src/analysis/: multi_timeframe.py
debian/usr/share/ict-trading-bot/src/config/: __init__.py
debian/usr/share/ict-trading-bot/src/signals/: trading_signals.py
src/analysis/: backtest.py  ict_analyzer.py  multi_timeframe.py  quick_analyzer.py  stub_analyzer.py
src/config/: __init__.py
src/data/: binance_client.py  demo_data.py  exness_connector.py  live_data.py  oanda_client.py
src/signals/: live_signals.py
static/: manifest.json
templates/: analysis.html  backtest.html  calendar.html  dashboard.html  opportunities.html  risk.html  sentiment.html  sentiment_temp.html  signals.html  trades.html
