[project]
name = "ict-trading-bot"
version = "1.0.0"
description = "ICT Trading Bot with OANDA (Forex) and Binance (Crypto)"
requires-python = ">=3.10"
dependencies = [
    "oandapyV20>=0.6.6",
    "python-binance>=1.0.19",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "flask>=3.1.3",
    "pyqt6>=6.10.2",
    "pyinstaller>=6.19.0",
    "buildozer>=1.5.0",
    "cython>=3.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]
